Create UI for verify_screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ flutter:
   assets:
     - assets/images/facebook-icon.png
     - assets/images/google-icon.png
-
+    - assets/images/verify-icon.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
