--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.2.2
+  intl: ^0.20.1
+  phosphor_flutter: ^2.0.1
+  iconsax: ^0.0.8
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +69,7 @@ flutter:
     - assets/images/google-icon.png
     - assets/images/verify-icon.png
     - assets/icons/
+    - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
