--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   image_picker: ^1.1.2
   marquee: ^2.3.0
   qr_flutter: ^4.1.0
+  http: ^1.2.2
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
