--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   qr_flutter: ^4.1.0
   http: ^1.2.2
   encrypt: ^5.0.3
+  stylish_bottom_bar: ^1.0.3
 
 dev_dependencies:
   flutter_test:
