--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^1.2.2
   encrypt: ^5.0.3
   stylish_bottom_bar: ^1.0.3
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
