--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   stylish_bottom_bar: ^1.0.3
   get: ^4.6.6
   flutter_dotenv: ^5.0.2
+  pushy_flutter: ^2.0.28
 
 dev_dependencies:
   flutter_test:
