--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   get: ^4.6.6
   flutter_dotenv: ^5.0.2
   pushy_flutter: ^2.0.28
+  web_socket_channel: ^3.0.1
 
 dev_dependencies:
   flutter_test:
