--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.2.2
-  intl: ^0.20.1
+  intl: ^0.19.0
   phosphor_flutter: ^2.0.1
   iconsax: ^0.0.8
   image_picker: ^1.1.2
@@ -49,6 +49,8 @@ dependencies:
   flutter_dotenv: ^5.0.2
   pushy_flutter: ^2.0.28
   web_socket_channel: ^3.0.1
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
