--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
-    ext.kotlin_version = '1.9.0'
+    ext.kotlin_version = '1.7.10'
+    ext {
+        java_version = JavaVersion.VERSION_17
+    }
     repositories {
         google()
         mavenCentral()
