--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   web_socket_channel: ^3.0.1
   flutter_localizations:
     sdk: flutter
+  # image_gallery_saver: ^2.0.3
+  # path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
