--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,17 +1,3 @@
-# Memory and encoding settings
-# Android settings
+org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
-android.defaults.buildfeatures.buildconfig=true
-android.nonTransitiveRClass=false
-android.nonFinalResIds=false
-
-# Performance settings
-org.gradle.parallel=true
-org.gradle.daemon=true
-org.gradle.configureondemand=true
-
-# Add these lines
-org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 -XX:+UseParallelGC
-org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
-android.overridePathCheck=true
