--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,11 +55,11 @@ dependencies:
     sdk: flutter
   # image_gallery_saver: ^2.0.3
   # path_provider: ^2.1.2
+  diacritic: ^0.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
